# edn

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LLMs.txt  README.md  full_out.txt  full_out2.txt  tmp.edn  variadic_missing.edn  vcpkg-configuration.json  vcpkg.json
benchmarks/: CMakeLists.txt  bench_main.cpp
cmake/: ednConfig.cmake.in
design/: abi.md  error_codes.md  modern_language_support_roadmap.md  phase1_plan.md  phase2_plan.md  phase3_plan.md  phase4_eh_linux_darwin.md  phase4_plan.md  phase5_plan.md  rustlite.md  rustlite_pegtl.md
docs/: ABI_SPEC.md  COROUTINES.md  DEBUG_INFO.md  EDN_BUILDER.md  EH.md  ENUMS_MATCHING.md  ERRORS.md  EXTERNALS.md  GENERICS.md  RUSTLITE.md  SUMS.md  TRAITS.md
edn/: arrays.edn  control.edn
epics/: epic_abi_and_runtime.md  epic_diagnostics_tooling.md  epic_macro_system.md  epic_polyglot_interop.md  epic_surface_languages.md  epic_tooling_platform.md
examples/: CMakeLists.txt  generics_example.cpp  llvm_ir_emitter.cpp  rustlite_feature_showcase.cpp  sum_example.cpp  traits_example.cpp
issues/: EDN-0001.md  EDN-0002.md  EDN-0003.md  EDN-0004.md  (+13 more)
languages/rustlite/: CMakeLists.txt
languages/rustlite/include/rustlite/: expand.hpp  features.hpp  rustlite.hpp  test_util.hpp
languages/rustlite/include/rustlite/macros/: context.hpp  helpers.hpp
languages/rustlite/parser/: parser.cpp  parser.hpp  parser_scratch.cpp
languages/rustlite/parser/pegtl/: entry.cpp  grammar.hpp  prelude.hpp
languages/rustlite/parser/pegtl/actions/: all.hpp  module.hpp
languages/rustlite/samples/: array_basic.rl.rs  assign_stmt.rl.rs  break_continue.rl.rs  call_args.rl.rs  complex_lowering.rl.rs  compound_assign.rl.rs  cstr_basic.rl.rs  else_if_chain.rl.rs  empty_call.rl.rs  empty_main.rl.rs  enum_basic.rl.rs  fn_params.rl.rs  ident_stmt.rl.rs  if_else.rl.rs  if_stmt.rl.rs  let_mut.rl.rs  let_stmt.rl.rs  let_typed.rl.rs  logical_ops.rl.rs  logical_ops_e2e.rl.rs  loop_stmt.rl.rs  mixed_precedence.rl.rs  nested_blocks.rl.rs  paren_exprs.rl.rs  rel_test.rl.rs  tuple_basic.rl.rs  unary_minus.rl.rs  unary_not.rl.rs  while_stmt.rl.rs
languages/rustlite/src/: expand.cpp  expand.cpp.DISABLED.bloated_old  macros_alias.cpp  macros_assert.cpp  macros_call_logic.cpp  macros_control.cpp  macros_field_index.cpp  macros_literals.cpp  macros_struct_trait.cpp  macros_sum_enum.cpp  macros_tuple_array.cpp  rustlite.cpp
languages/rustlite/surface_tests/: CMakeLists.txt  surface_norm.cpp
languages/rustlite/surface_tests/samples/: array_expr_only.gold.edn  array_expr_only.rl.rs  array_index_read.gold.edn  array_index_read.rl.rs  array_index_write.gold.edn  array_index_write.rl.rs  array_literal.gold.edn  array_literal.rl.rs  assign_stmt.gold.edn  assign_stmt.rl.rs  bitwise_compound.gold.edn  bitwise_compound.rl.rs  bitwise_ops.gold.edn  bitwise_ops.rl.rs  break_continue.gold.edn  break_continue.rl.rs  call_args.gold.edn  call_args.rl.rs  compound_assign.rl.rs  compound_shift.gold.edn  compound_shift.rl.rs  ematch_exhaustive.gold.edn  ematch_exhaustive.rl.rs  ematch_non_exhaustive.gold.edn  ematch_non_exhaustive.rl.rs  ematch_payloads.gold.edn  ematch_payloads.rl.rs  empty_call.gold.edn  empty_call.rl.rs  enum_basic.gold.edn  enum_basic.rl.rs  eq_ne_ops.gold.edn  eq_ne_ops.rl.rs  fn_call.gold.edn  fn_call.rl.rs  fn_params.gold.edn  fn_params.rl.rs  for_in_inclusive.gold.edn  for_in_inclusive.rl.rs  for_in_var_bounds.gold.edn  (+49 more)
languages/rustlite/tools/: rustlite_bitwise_ops_driver.cpp  rustlite_bounds_driver.cpp  rustlite_closure_driver.cpp  rustlite_closure_infer_disabled_driver.cpp  rustlite_closure_infer_driver.cpp  rustlite_closure_negdriver.cpp  rustlite_compound_assign_driver.cpp  rustlite_cstr_unknown_escape_driver.cpp  rustlite_driver.cpp  rustlite_e2e_driver.cpp  rustlite_ematch_exhaustive_driver.cpp  rustlite_ematch_non_exhaustive_driver.cpp  rustlite_ematch_payload_driver.cpp  rustlite_enum_driver.cpp  rustlite_enum_surface_driver.cpp  rustlite_extern_global_init_negdriver.cpp  rustlite_extern_globals_driver.cpp  rustlite_extern_globals_negdriver.cpp  rustlite_externdriver.cpp  rustlite_fnptr_driver.cpp  rustlite_generics_basic_driver.cpp  rustlite_generics_bounds_driver.cpp  rustlite_generics_neg_arity_driver.cpp  rustlite_generics_neg_bound_driver.cpp  rustlite_generics_neg_unknown_driver.cpp  rustlite_generics_param_driver.cpp  rustlite_genericsdriver.cpp  rustlite_if_while_let_driver.cpp  rustlite_if_while_let_neg_case_result_type_mismatch_driver.cpp  rustlite_if_while_let_neg_default_result_type_mismatch_driver.cpp  rustlite_if_while_let_neg_missing_default_value_driver.cpp  rustlite_if_while_let_neg_missing_value_driver.cpp  rustlite_if_while_let_neg_undefined_value_driver.cpp  rustlite_if_while_let_neg_variant_mismatch_driver.cpp  rustlite_index_addr_driver.cpp  rustlite_index_bounds_ok_driver.cpp  rustlite_index_bounds_oob_driver.cpp  rustlite_indexing_driver.cpp  rustlite_jit_driver.cpp  rustlite_keyword_ident_negdriver.cpp  (+55 more)
tests/: CMakeLists.txt  README.md  cast_test.cpp  core_main.cpp  diagnostics_test.cpp  globals_test.cpp  ir_emitter_test.cpp  main.cpp  phase2_feature_test.cpp  phase2_main.cpp  phase3_addr_deref_test.cpp  phase3_cast_sugar_test.cpp  phase3_diagnostics_json_test.cpp  phase3_diagnostics_notes_test.cpp  phase3_enum_test.cpp  phase3_examples_smoke_test.cpp  phase3_fnptr_test.cpp  phase3_for_continue_test.cpp  phase3_loop_slot_init_test.cpp  phase3_main.cpp  phase3_pointer_arith_test.cpp  phase3_struct_decl_test.cpp  phase3_switch_test.cpp  phase3_typedef_test.cpp  phase3_union_test.cpp  phase3_variadic_runtime_test.cpp  phase3_variadic_test.cpp  phase4_abi_golden_test.cpp  phase4_closures_capture_mismatch_test.cpp  phase4_closures_jit_smoke_test.cpp  phase4_closures_min_test.cpp  phase4_closures_negative_test.cpp  phase4_closures_record_test.cpp  phase4_coro_ir_golden_test.cpp  phase4_coro_jit_smoke_test.cpp  phase4_coro_lowering_smoke_test.cpp  phase4_coro_minimal_regression_test.cpp  phase4_coro_negative_tests.cpp  phase4_coro_suspend_regression_test.cpp  phase4_debug_info_locals_test.cpp  (+60 more)
(+113 files in other folders)
