add_executable(edn_llvm_ir_example llvm_ir_emitter.cpp)
set_target_properties(edn_llvm_ir_example PROPERTIES CXX_STANDARD 20 CXX_STANDARD_REQUIRED YES)
target_link_libraries(edn_llvm_ir_example PRIVATE edn)
if(TARGET fmt::fmt)
	target_link_libraries(edn_llvm_ir_example PRIVATE fmt::fmt)
endif()
if(LLVM_FOUND)
	# Use a minimal subset of LLVM components for now (Core + Support)
	if(TARGET LLVM::Core)
		target_link_libraries(edn_llvm_ir_example PRIVATE LLVM::Core LLVM::Support)
	endif()
endif()
